Fixed margin top of wrap issue

--- a/client/app/styles/components/footer.less
+++ b/client/app/styles/components/footer.less
@@ -10,7 +10,7 @@
 .wrap {
   min-height: 100%;
   height: auto !important;
-  margin-top: 98px;
+  margin-top: 91px;
   margin-bottom: -@footer-size;
 }
 
@@ -116,3 +116,9 @@ footer .copyright {
         padding-left: 10px;
     }
 }
+
+@media only screen and (min-width: 1200px) {
+    .wrap{margin-top: 98px;}
+}
+
+
